<?xml version="1.0"?>
<package format="2">
  <name>driverless</name>
  <version>0.0.0</version>
  <description>The driverless package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="wuconglei@todo.todo">wuconglei</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>driverless_common</build_depend>
  <build_depend>driverless_actions</build_depend>
  <build_depend>perception_msgs</build_depend>
  <build_depend>obu_msgs</build_depend>
  <build_depend>light_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>driverless_common</build_export_depend>
  <build_export_depend>driverless_actions</build_export_depend>
  <build_export_depend>perception_msgs</build_export_depend>
  <build_export_depend>obu_msgs</build_export_depend>
  <build_export_depend>light_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>driverless_common</exec_depend>
  <exec_depend>driverless_actions</exec_depend>
  <exec_depend>perception_msgs</exec_depend>
  <exec_depend>obu_msgs</exec_depend>
  <exec_depend>light_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
